--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# REACT_APP_BASE_URL = http://localhost:4000/api/v1
-# REACT_APP_RAZORPAY_KEY = rzp_test_f5Xn4ntk3WYDKa
+REACT_APP_BASE_URL = http://localhost:4000/api/v1
+REACT_APP_RAZORPAY_KEY = rzp_test_f5Xn4ntk3WYDKa
 
