--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules (root and any subfolder)
+node_modules/
 
-# dependencies
-node_modules
-.pnp
-.pnp.js
+# Ignore all .env files anywhere in the project
+**/.env
+**/.env.*  # includes .env.local, .env.production, etc.
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Optional: IDE/editor settings
+.vscode/
+.idea/
+*.sw?
+
+# Optional: build output
+dist/
+build/
